Refactorizacion String.format